# eos-google-chrome-app

./: AUTHORS  README.md  apply_extra.sh  autogen.sh  chrome.sh  com.google.Chrome.appdata.xml  com.google.Chrome.desktop  com.google.Chrome.json  com.google.Chrome.yaml  configure.ac  eos-google-chrome-app  flathub.json  metadata-writer  repoperms.py
.github/workflows/: check.yml  perms.yml
debian/: changelog  control  copyright  rules
src/: Makefile.am  eos-google-chrome-app
